# fastapi-ddd-abs-libs

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run.py  script.py
.github/workflows/: python-app.yml
src/: main.py  settings.py
src/app/security/: __init__.py  command.py  domain.py
src/app/security/entrypoint/: __init__.py  cli.py  http.py
src/app/security/infra/migrations/: __init__.py
src/app/security/infra/migrations/postgres/: 1_create_profile_table.py  __init__.py
src/app/security/infra/migrations/psycopg/: 1_create_profile_table.py  2_change_name_table_profile_to_user.py  3_create_profile_table.py  4_add_attribute_user_password_and_permission.py  5_change_increase_attribute_id_user.py  6_change_increase_attribute_profile_foreign.py  __init__.py
src/app/security/infra/repositories/: __init__.py
src/app/security/infra/repositories/postgres/: __init__.py  profile.py
src/app/security/infra/repositories/psycopg/: __init__.py  profile.py  user.py
src/app/security/services/: authentication.py  user.py
src/app/shared/: __init__.py  command.py  scripts.py
src/app/shared/entrypoint/: __init__.py  http.py
src/app/shared/services/: common.py  user.py
src/app/task/: __init__.py  command.py
src/app/task/domain/: entity.py  repository.py  views.py
src/app/task/entrypoint/: __init__.py  http.py
src/app/task/infra/migrations/psycopg/: 1_create_table_board.py  2_create_table_task.py  3_create_table_task_history.py  4_create_table_ownership_board.py  5_change_increase_attribute_id_ownership.py  6_add_board_id_attribute_in_task_and_relation.py  (+4 more)
src/app/task/services/: board.py  task.py
src/domain/: libtools.py
src/domain/entrypoint/: cli.py  http.py  model.py
src/domain/models/: domain.py  entity.py  exceptions.py  filter.py  mixin.py  repository.py  script.py
src/domain/services/: command.py  user.py
src/fastapi_ddd_abs_libs/: base.py
src/infra/cli/: __init__.py  cyclopts.py  model.py
src/infra/environment_variable/: __init__.py  dotenv_python.py  model.py
src/infra/filter/: __init__.py  postgres.py
src/infra/http/: __init__.py  fastapi.py  model.py
src/infra/jwt/: __init__.py  model.py  pyjwt.py
src/infra/log/: __init__.py  logging.py  model.py
src/infra/migrator/: __init__.py  model.py
src/infra/migrator/psycopg/: __init__.py
src/infra/migrator/psycopg/sql/: exist_table_select_migration.sql  find_filename_in_migration_migration.sql  mark_as_migrated.sql  migration_table_select_migration.sql
src/infra/mixin/: postgres.py
src/infra/server/: __init__.py  model.py  uvicorn.py
src/infra/uow/: __init__.py  model.py  psycopg.py
tests/: test_check_unit.py  test_settings.py
tests/app/security/services/: test_authentication.py
tests/app/task/domain/: test_entity.py
tests/app/task/services/: test_board.py  test_task.py
tests/fast_api_ddd_abs_libs/: test_base.py
tests/infra/environment_variable/: test_dotenv_python.py
tests/infra/filter/: test_postgres.py
tests/infra/http/: test_fastapi.py
tests/infra/jwt/: test_pyjwt.py
tests/infra/log/: test_logging.py
tests/infra/migrator/: test_psycopg.py
tests/infra/server/: test_uvicorn.py
tests/infra/uow/: test_psycopg.py
(+3 files in other folders)
